--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <div id="root" style="height: 100%"></div>
-<script src="./dist/app.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
