--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <title>Semantic UI React Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+
 </head>
 <body>
 <div id="root" style="height: 100%"></div>
